src/objects/Form_Field__c.object
<CustomObject>
    <description>Represents fields that appear on forms in the Adobe Forms Service. The columns identify source objects and fields, the target field on Document Request, and special processing instructions.</description>
    <fields>
        <fullName>Line_item_field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Checkbox to indicate whether field has multiplicity property and needs to be represented in document request line item.</description>
        <label>Line item field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_item_type__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Picklist for multiplicity fields to group together on one line item record when in the same node - value maps to Type field on document request line item.</description>
        <label>Line item type</label>
        <picklist>
            <controllingField>Line_item_field__c</controllingField>
            <picklistValues>
                <fullName>Co-Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Charges</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Arbitrary unique number assigned to the record to facilitate migration of metadata between environments.</description>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_FAC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Indicates if the field should always reference the primary borrower or the current FAC.</description>
        <inlineHelpText>If checked the primary borrower&apos;s record (FAC) is always used to fill in this field.</inlineHelpText>
        <label>Primary FAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The source field from which the data should be fetched.</description>
        <label>Source Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The source object from which the data should be fetched.</description>
        <label>Source Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The target field on the document request record or line item where the data will be stored.</description>
        <label>Target Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_DestinationNode__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The node in the forms WSDL to which the field belongs.</description>
        <inlineHelpText>Object Notation of child nodes of the soap envelope beneath the &quot;LCForms&quot; level.  e.g. Request.CreationDate.
IF this is a 1:many, then instead of dot notation, use a pipe &apos;|&apos; after property that denotes a &apos;many object&apos;.  e.g. req.node.addys|addy.state</inlineHelpText>
        <label>WS_DestinationNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Sequence__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The node sequence as defined in the forms WSDL.</description>
        <label>WS_Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Source_Object__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Primary_FAC__c</columns>
        <columns>WS_DestinationNode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>